perf: use Contended annotation instead of manual padding